--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.0",
     "react-image-gallery": "^1.2.11",
+    "react-loader-spinner": "^5.3.4",
     "react-multi-carousel": "^2.8.2",
     "react-pincode": "^1.1.3",
     "react-quill": "^2.0.0",
