--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "set HTTPS=true&&set SSL_CRT_FILE=certificate.crt&&set SSL_KEY_FILE=private.key&&react-scripts start",
+    "start": "export HTTPS=true&&SSL_CRT_FILE=Ssl/certificate.crt&&Ssl/SSL_KEY_FILE=private.key react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -117,3 +117,4 @@
     "webpack": "^5.74.0"
   }
 }
+
